Utvider BFHR test hvor far gir fra seg alle periodene (#597)
* Utvider BFHR test hvor far gir fra seg alle periodene

* Rydder litt i kode o glegger til TODO på verifisering i test.

* Tilbyr metode for å hente ut historikkinnslag for fagsak